# SentinelOps

./: .bandit  .dockerignore  .editorconfig  .env.example  .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  build_and_run.sh  cloud-run-service.yaml  cloudbuild-agents.yaml  cloudbuild-prod.yaml  cloudbuild.yaml  docker-compose.yml  mypy.ini  pyproject.toml  pytest.ini  requirements-no-adk.txt  requirements.txt
.githooks/: commit-msg
agents/analysis/: Dockerfile  Dockerfile.bak  main.py  requirements.txt
agents/communication/: Dockerfile  Dockerfile.bak  main.py  requirements.txt
agents/detection/: Dockerfile  main.py  requirements.txt
agents/orchestrator/: Dockerfile  Dockerfile.bak  main.py  requirements.txt
agents/remediation/: Dockerfile  Dockerfile.bak  main.py  requirements.txt
config/: agent_config.py  config.yaml  cost_optimization.yaml  error_reporting.yaml  failover_config.yaml  firestore.indexes.json  firestore_replication.yaml  health_check_config.yaml  log_retention.yaml  monitoring_config.yaml  multi_region_ha.yaml  network_redundancy.yaml  pubsub_redundancy.yaml  resource_naming.json  rotation_policies.yaml  threat_scenarios.yaml  traffic_management.yaml
configs/: performance-profiling.ini  security-scanning.yaml
demo/: additional_incidents.py  attack_simulator.py  demo_script.md  prepare_bigquery.py  sample_incidents.py
demos/: connect_ui_backend.py  demo_sentinelops.py  demo_threat_simulation.py  deploy_live_demo.sh  simple_api.py  start_simple.py
deploy/: dev.yaml  prod.yaml  staging.yaml
docs/: README.md  documentation-style-guide.md
docs/.internal-docs/: agent-interactions-old.md  diagrams-agent-interactions-old.md  generate_diagrams.py  nlp-interface.md  system-architecture-old.md
docs/01-getting-started/: introduction.md  quick-start.md  system-requirements.md  threat-simulator-guide.md
docs/02-architecture/: README.md  agent-communication-api.md  agent-interactions.md  architecture.md  data-flow.md  diagrams.md  gcp-integration.md  incident_response_workflow.md  multi-region-ha-guide.md  orchestrator-agent.md  resource-hierarchy.md  sequence-diagrams.md  web-interface-architecture.md
docs/03-deployment/: README.md  adk-deployment-guide.md  architecture.md  gcp-deployment-comprehensive.md  gcp-deployment.md  iam-permissions.md  production-deployment-guide.md
docs/04-operations/: adk-troubleshooting.md  disaster-recovery-consolidated.md  disaster-recovery-runbook.md  dr-quick-reference.md  escalation_procedures.md  failover-mechanisms-guide.md  firestore-backup-guide.md  gcp-troubleshooting.md  incident-response.md  maintenance-guide.md  monitoring-and-metrics.md  redundancy-guide.md  scaling-guidelines.md
docs/05-development/: REAL_GCP_TESTING_POLICY.md  ci-cd-pipeline.md  ci-cd-updates-guide.md  debugging-transfers-guide.md  local-development-guide.md  performance-profiling-guide.md  remediation-agent-security-review.md  (+1 more)
examples/: service_auth_example.py
frontend/: .browserlistrc  ACTIVITY_VIEWER.md  APPROVAL_WORKFLOWS.md  CHAT_INTERFACE.md  INCIDENT_COMPONENTS.md  MOBILE_OPTIMIZATION.md  SPLIT_SCREEN_IMPLEMENTATION.md  deploy-to-vercel.sh  next.config.ts  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vercel.json
queries/: data_exfiltration_detection.sql  privilege_escalation.sql  suspicious_login_attempts.sql
scripts/: 01-create-gcp-project.sh  02-setup-billing.sh  03-enable-apis.sh  04-setup-iam.sh  05-setup-vpc.sh  06-setup-firewall.sh  07-setup-cloud-nat.sh  README.md  deploy-to-vercel.sh  disaster-recovery-test.sh  firestore.indexes.json  firestore.rules  manual_setup_instructions.md  production-readiness-check.sh  resilience-testing.cron  sentinelops-failover.service  setup-bigquery.sh  setup-binary-authorization.sh  setup-budget-alerts.sh  setup-caching-strategy.sh  setup-cloud-build.sh  setup-cloud-sql.sh  setup-committed-use-discounts.sh  setup-container-registry.sh  setup-ddos-protection.sh  setup-load-balancing.sh  setup-preemptible-instances.sh  setup-query-optimization.sh  setup-resource-scheduling.sh  setup-right-sizing.sh  setup-ssl-tls.sh  setup-waf.sh  setup-workload-identity.sh  track_test_coverage.py
src/: __init__.py  agent_factory.py  cloud_run_agent_wrapper.py  cloud_run_minimal_wrapper.py  cloud_run_simple_wrapper.py  cloud_run_wrapper.py  main.py
terraform/: backend.tf  infrastructure.tf  main.tf  monitoring.tf  outputs.tf  providers.tf  variables.tf
tests/: conftest.py  coverage_achievement_demo.py  gcp_test_verification_results.json  phase4_adk_compliance.py  phase4_analysis_validation.py  phase4_analysis_validation_results.md  phase4_detection_test_simple.py  phase4_detection_validation.py  run_phase4_tests.py  test_adk_compliance.py  test_adk_e2e.py  test_adk_integration.py  test_basic_adk_integration.py  test_performance_optimizer_integration.py  test_real_gcp_integration.py  test_sentinelops.py  validate_phase4.py  verify_multi_agent.py  verify_multi_agent_structure.py
tools/: simulate_incident.py
(+902 files in other folders)
